--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "google-charts": "^2.0.0",
-    "sweetalert2": "^11.7.20",
+    "sweetalert2": "^11.6.13",
     "vue": "^2.7.14",
     "vue-apexcharts": "^1.6.2",
     "vue-chartjs": "^5.2.0",
@@ -31,7 +31,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "~1.32.0",
